legacy/previous_apex/legacy/previous_ultra/legacy/previous_max/legacy/previous_final/legacy/original_project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neonsec
spec:
  rules:
  - http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: neonsec
            port:
              number: 9464
